// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsMobileMenu - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="fixed top-[73px] right-0 left-0 z-20 border-b border-[var(--base-border,#303034)] bg-background/80 backdrop-blur-sm custom-menu"
>
  <div
    class="flex w-full"
  >
    <button
      aria-current="page"
      aria-label="Account"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-white text-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user-round shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="8"
          r="5"
        />
        <path
          d="M20 21a8 8 0 0 0-16 0"
        />
      </svg>
    </button>
    <button
      aria-label="Notifications"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
    </button>
    <button
      aria-label="Privacy & Safety"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shield shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
        />
      </svg>
    </button>
    <button
      aria-label="Muted Users"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-megaphone-off shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.26 9.26 3 11v3l14.14 3.14"
        />
        <path
          d="M21 15.34V6l-7.31 2.03"
        />
        <path
          d="M11.6 16.8a3 3 0 1 1-5.8-1.6"
        />
        <line
          x1="2"
          x2="22"
          y1="2"
          y2="22"
        />
      </svg>
    </button>
    <button
      aria-label="Language"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-globe shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
        />
        <path
          d="M2 12h20"
        />
      </svg>
    </button>
    <button
      aria-label="Help"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-help shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`SettingsMobileMenu - Snapshots > matches snapshot with default props 1`] = `
<div
  class="fixed top-[73px] right-0 left-0 z-20 border-b border-[var(--base-border,#303034)] bg-background/80 backdrop-blur-sm"
>
  <div
    class="flex w-full"
  >
    <button
      aria-current="page"
      aria-label="Account"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-white text-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user-round shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="8"
          r="5"
        />
        <path
          d="M20 21a8 8 0 0 0-16 0"
        />
      </svg>
    </button>
    <button
      aria-label="Notifications"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
    </button>
    <button
      aria-label="Privacy & Safety"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-shield shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
        />
      </svg>
    </button>
    <button
      aria-label="Muted Users"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-megaphone-off shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.26 9.26 3 11v3l14.14 3.14"
        />
        <path
          d="M21 15.34V6l-7.31 2.03"
        />
        <path
          d="M11.6 16.8a3 3 0 1 1-5.8-1.6"
        />
        <line
          x1="2"
          x2="22"
          y1="2"
          y2="22"
        />
      </svg>
    </button>
    <button
      aria-label="Language"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-globe shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
        />
        <path
          d="M2 12h20"
        />
      </svg>
    </button>
    <button
      aria-label="Help"
      class="relative flex flex-1 items-center justify-center gap-2 px-2.5 py-3.5 transition-all hover:bg-secondary/10 border-b border-transparent text-muted-foreground"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-help shrink-0"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </button>
  </div>
</div>
`;
